--- a/Entscheidung.html
+++ b/Entscheidung.html
@@ -73,7 +73,7 @@
             <div class="sub-branch">
                 <!-- Kernelemente -->
                 <div class="branch connector">
-                    <div class="node level-1">Kernelemente</div>
+                    <div class="node level-1">Kernelemente veränderungen</div>
                     <div class="node level-2">Handlungsoptionen</div>
                     <div class="node level-2">Definiertes Ziel</div>
                     <div class="node level-2">Auswahlkriterien</div>
