--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
             <li><a href="#about">Über uns</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#contact">Kontakt</a></li>
+            <li><a href="#greenwave">greenwave</a></li>
         </ul>
     </nav>
 
