--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <nav>
         <ul>
             <li><a href="#home">Home</a></li>
-            <li><a href="#about">Über uns</a></li>
+            <li><a href="about">Über uns</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#contact">Kontakt</a></li>
             <li><a href="#greenwave">greenwave</a></li>
